# fabric

./: .gitignore  CMakeLists.txt  README.md
Source/: FabricEditor.cpp  FabricEditor.h  FabricProcessor.cpp  FabricProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/: addressed_overlap_modulator.pulse  bouncing_ball.pulse  cadence_projector.pulse  cc_glitch.pulse  chance_operations.pulse  choice_table.pulse  chord_projector.pulse  complex_modulator.pulse  constraint_collapse.pulse  contrary_projector.pulse  crystal_growth.pulse  cutup_machine.pulse  decision_tree.pulse  equation_melody.pulse  equation_midi.pulse  fabric_hub_pure_data.pd  fibonacci_smear.pulse  formula_line.pulse  groove_ratchet_arp.pulse  growth_modulator.pulse  interval_projector.pulse  lists_to_notes.pulse  live_memory_machine.pulse  loop_into_cutup.pulse  markov_chain.pulse  micro_house_tools.pulse  micro_slice_pool.pulse  midi_bits.pulse  midi_loop.pulse  modulated_modulator.pulse  modulator_stage_gates.pulse  moment_form.pulse  motion_to_notes.pulse  movement_projector.pulse  pattern_machine.pulse  phrase_guided_projector.pulse  poly_to_notes.pulse  progression_planner.pulse  random_held_notes.pulse  random_machine.pulse  (+16 more)
include/pulse/: Ast.hpp  Compiler.hpp  JuceIntegration.hpp  Lexer.hpp  Parser.hpp  Runtime.hpp  Types.hpp
src/: Compiler.cpp  Engine.cpp  Lexer.cpp  Parser.cpp  Runtime.cpp  main.cpp
tutorials/: 01-first-pattern.md  02-live-quantize-and-arp.md  03-random-walk.md  04-split-delay-and-arp.md  05-midi-loop.md  06-bouncing-ball.md  07-motion-to-notes.md  08-lists-to-notes.md  09-groove-swing-ratchet.md  10-bitwise-midi-filters.md  11-temporal-smear.md  12-warped-pitch-space.md  13-crystal-growth.md  14-constraint-collapse.md  15-complex-modulator.md  16-held-note-random.md  17-section-form-control.md  18-phrase-guided-harmony.md  19-multi-agent-swarm.md  20-growth-and-modulator.md  21-modulator-stage-gates.md  22-cc-bit-glitch.md  23-loop-into-cut-up.md  24-equation-basics.md  25-chance-operations.md  26-sieve-basics.md  27-field-basics.md  28-formula-basics.md  29-moment-form.md  30-choice-table.md  31-markov-chain.md  32-decision-tree.md  33-subpatch-basics.md  34-reusable-modules.md  35-shared-probability.md  README.md
